<resources>
    <string name="app_name">Calculator</string>
    //activity_main.xml//
    <string name="plus_symbol">+</string>
    <string name="minus_symbol">−</string>
    <string name="multiply_symbol">×</string>
    <string name="divide_symbol">÷</string>
    <string name="dot_symbol">•</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="clear_symbol">C</string>
    <string name="equals_symbol">=</string>
    <string name="history">⟳</string>
    <string name="back">←</string>

    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ctan">ctan</string>
    <string name="arcsin">arcsin</string>
    <string name="arccos">arccos</string>
    <string name="arctan">arctan</string>
    <string name="arcctan">arcctan</string>

    <string name="ln">ln</string>
    <string name="sqrt">√</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="power">^</string>
    <string name="pi">π</string>
    //fragment_history.xml//
    <string name="clear">clear</string>
    //Solvator.java//
    <string name="number_too_large_warning">The number can\'t exceed 15 digits in advanced mode</string>
    //menu_main.xml
    <string name="converter">Converter</string>

    //activity_converter.xml//
    <string-array name="converter_options">
        <item name = "currency">Currency</item>
        <item name = "weight">Weight</item>
        <item name = "distance">Distance</item>
        <item name = "volume">Volume</item>
    </string-array>
    <string-array name="currency_options">
        <item name = "USD">USD</item>
        <item name = "RUB">RUB</item>
        <item name = "EUR">EUR</item>
        <item name = "GBP">GBP</item>
        <item name = "AUD">AUD</item>
        <item name = "CAD">CAD</item>
        <item name = "CNY">CNY</item>
        <item name = "JPY">JPY</item>
    </string-array>
</resources>
